--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button type="button">Sign Up</button>
                 </div>
                 <div class="hero-1 hero-image">
-                    <img src="images/IMG-20210928-WA0014_3.jpg" alt="shiba">
+                    <img src="images/IMG-20210928-WA0014_3.jpg" alt="tuttu">
                 </div>
             </div>
 
